--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+/bilmuh.iml
